--- a/referencias.bib
+++ b/referencias.bib
@@ -1,12 +1,31 @@
 % This file was created with JabRef 2.10b2.
 % Encoding: UTF-8
+
+%.bib xxx books google
 @book{pressman2009engenharia,
   title={Engenharia de Software - 7.ed.},
   author={Pressman, R.S.},
   isbn={9788580550443},
-  url={https://books.google.com.br/books?id=y0rH9wuXe68C},
   year={2009},
   publisher={McGraw Hill Brasil}
+}
+
+@book{bentodesenvolvimento,
+  title={Desenvolvimento Web Com Php E Mysql},
+  author={Bento, E.J.},
+  isbn={9788566250305},
+  year={2014},
+  publisher={CASA DO CODIGO}
+}
+
+@book{tulach2008practical,
+  title={Practical API Design: Confessions of a Java Framework Architect},
+  author={Tulach, J.},
+  isbn={9781430209744},
+  lccn={2009277198},
+  series={Expert's voice in Java technology},
+  year={2008},
+  publisher={Apress}
 }
 
 @misc{MotoboyVeja,
@@ -17,19 +36,11 @@
   Urlaccessdate           = {01 de maio de 2019}
 }
 
-
-@Book{rest:roy,
+@Article{rest:roy,
   Title                    = {Architectural Styles and the Design of Network-based Software Architectures},
   Author                   = {Roy Thomas Fielding},
   Year                     = {2000},
   Address                  = {UNIVERSITY OF CALIFORNIA, IRVINE}
-}
-
-@Book{jaroslavapi,
-  Title                    = {Practical API Desig},
-  Author                   = {Jaroslav Tulach},
-  Year                    = {2008},
-  Publisher                = {Editora Apress}
 }
 
 @inproceedings{He2015/01,
@@ -67,6 +78,13 @@
   url={https://www.ijcter.com/papers/volume-2/issue-6/comparison-of-procedural-php-with-codeigniter-and-laravel-framework.pdf}
 }
 
+@misc{phpdevelopment,
+  Title                   = {O que é o PHP?},
+  Author                  = {PHP, Development, Group},
+  Year                    = {2019},
+  Url                     = {www.php.net},
+  Urlaccessdate           = {27 de setembro de 2019}
+}
 
 @misc{redhat,
   Title                   = {O que é uma API?},
@@ -75,7 +93,6 @@
   Url                     = {https://www.redhat.com/pt-br/topics/api/what-are-application-programming-interfaces},
   Urlaccessdate           = {07 de setembro de 2019}
 }
-
 
 @misc{api:w3c,
   Title                   = {W3C},
