--- a/text-elements/pre-textuais/listas/lista-siglas.tex
+++ b/text-elements/pre-textuais/listas/lista-siglas.tex
@@ -7,6 +7,7 @@
     \item[AJAX] \textit{Asynchronous JavaScript and XML}
     \item[API] \textit{Application Programming Interface}
     \item[CDMA] \textit{Code Division Multiple Access}
+    \item[CGI] \textit{Common Gateway Interface}
     \item[CLI] \textit{Command Line Interfaces}
     \item[GIS] \textit{Geographic Information System}
     \item[GPRS] \textit{General Packet Radio Service}
@@ -14,6 +15,7 @@
     \item[GSM] \textit{Global System for Mobile Communications}
     \item[HTML] \textit{HyperText Markup Language}
     \item[HTTP] \textit{Hypertext Transfer Protocol}
+    \item[IMAP] \textit{Internet Message Access Protocol}
     \item[IP] \textit{Internet Protocol Address}
     \item[JS] \textit{JavaScript}
     \item[JSON] \textit{JavaScript Object Notation}
@@ -23,6 +25,7 @@
     \item[ORM] \textit{Object Relational Mapper}
     \item[PHP] \textit{Personal Home Page}
     \item[PSR] \textit{PHP Standard Recommendation}
+    \item[POP3] \textit{Post Office Protocol}
     \item[QR] \textit{Quick Response}
     \item[REST] \textit{Representational State Transfer}
     \item[SOAP] \textit{Simple Object Access Protocol}
