--- a/text-elements/textuais/desenvolvimento/tecnologias.tex
+++ b/text-elements/textuais/desenvolvimento/tecnologias.tex
@@ -9,7 +9,7 @@ Este Capítulo descreve as tecnologias necessárias para o desenvolvimento deste
 %https://www.devmedia.com.br/application-programming-interface-desenvolvendo-apis-de-software/30548
 Destaca-se do pensamento de \citeonline{pressman2009engenharia} que API é o acrônimo de Interface de Programação de Aplicativos. Na grande maioria das vezes uma API se comunica com diversos outros códigos interligando diversas funções em um aplicativo, como pode ser visto na \autoref{fig:api}. Esta interface de programação é um conjunto de padrões de programação que permitem a construção de aplicativos e a sua utilização. Portanto, uma API é uma abstração da funcionalidade e da implementação interna de cada componente. Com uma API é possível criar sistemas melhores e minimizar o entendimento de todos os detalhes de um componente e assim serve como um “alicerce”, abstraindo a funcionalidade e implementação interna de cada componente.
 
-Segundo \citeonline{jaroslavapi}, API é um conjunto de classes, seus métodos e seus campos.
+Segundo \citeonline{tulach2008practical}, API é um conjunto de classes, seus métodos e seus campos.
 Uma boa API é o conjunto de arquivos que o aplicativo lê ou escreve, bem como seu formato. Algumas aplicações sequer fazem uso do disco rígido, assim sendo não precisam se preocupar com esse tipo de coisa. O primeiro objetivo da engenharia é produzir sistemas funcionais. Uma API também precisa ser fácil de usar, largamente adotada e produtiva.
 
 \begin{figure}[H]
