--- a/referencias.bib
+++ b/referencias.bib
@@ -28,6 +28,53 @@
   publisher={Apress}
 }
 
+@Article{apache:magazine,
+  Title                    = {Configurações básicas no Apache2},
+  Author                   = {Ricardo Franzen},
+  Journal                  = {Revista Infra Magazine},
+  Year                     = {2011},
+}
+
+@Article{apache:webmedia,
+  Title                    = {Classes de Serviço em Servidores Web Apache Através de Escalonamento Adaptativo e Controle de Admissão},
+  Author                   = {Tiago Semprebom and Rômulo de Oliveira and Carlos Montez},
+  Year                     = {2006},
+  publisher={XII WEBMEDIA - Simpósio Brasileiro de Sistemas Multimídia e Web}
+  url={http://www.romulosilvadeoliveira.eng.br/artigos/Tiago-Romulo-Montez-Webmedia2006.pdf}
+}
+
+@Article{apache:Marcelo,
+  Title                    = {Análise do Servidor Web Apache em Clusters OpenMosix com Memória Compartilhada Distribuída},
+  Author                   = {Marcelo Soares Souza},
+  Year                     = {2004},
+  url={https://www.researchgate.net/profile/Marcelo_Souza7/publication/228608559_Analise_do_Servidor_Web_Apache_em_Clusters_OpenMosix_com_Memoria_Compartilhada_Distribuida/links/0046351a6611e5a783000000/Analise-do-Servidor-Web-Apache-em-Clusters-OpenMosix-com-Memoria-Compartilhada-Distribuida.pdf}
+}
+
+@Article{apache:corte,
+  Title                    = {Método para  a avaliação de servidores WWW no ambiente corporativo},
+  Author                   = {Leandro Côrte},
+  Year                     = {2002},
+  Address                   = {Universidade Federal do Rio Grande do Sul},
+  url={https://lume.ufrgs.br/handle/10183/3375}
+}
+
+%http://revistas.ung.br/index.php/computacaoaplicada/article/viewFile/1950/1545
+@misc{netcraft,
+  Title                   = {September 2019 Web Server Survey},
+  Author                  = {Netcraft},
+  Year                    = {2019},
+  Url                     =  {https://news.netcraft.com/archives/2019/09/27/september-2019-web-server-survey.html},
+  Urlaccessdate           = {29 de setembro de 2019}
+}
+
+@misc{modapache,
+  Title                   = {Entendendo a organização dos arquivos Apache 2},
+  Author                  = {Adriano Meirelles},
+  Year                    = {2006},
+  Url                     =  {https://www.hardware.com.br/livros/linux-redes/entendendo-organizacao-dos-arquivos-apache.html},
+  Urlaccessdate           = {29 de setembro de 2019}
+}
+
 @misc{MotoboyVeja,
   Title                   = {Motoboy, uma palavra brasileira},
   Author                  = {S{\'e}rgio Rodrigues},
@@ -76,6 +123,15 @@
   Journal                  = {International Journal of Current Trends in Engineering & Research (IJCTER)},
   Year                     = {2016},
   url={https://www.ijcter.com/papers/volume-2/issue-6/comparison-of-procedural-php-with-codeigniter-and-laravel-framework.pdf}
+}
+
+%Faculdade de Engenharia da Universidade do Porto
+@misc{FEUP,
+  Title                   = {CGI - Common Gateway Interface},
+  Author                  = {FEUP},
+  Year                    = {2019},
+  Url                     = {https://web.fe.up.pt/~goii2000/M9/cgi.htm},
+  Urlaccessdate           = {28 de setembro de 2019}
 }
 
 @misc{phpdevelopment,
