--- a/text-elements/pre-textuais/agradecimentos.tex
+++ b/text-elements/pre-textuais/agradecimentos.tex
@@ -3,7 +3,13 @@
 \begin{resumo}[AGRADECIMENTOS]
 \begin{SingleSpacing}
 
-A minha família Claudete, Gilmar e Samanta que nunca mediram esforços durante esta longa jornada, sempre estando ao meu lado, me apoiando e me corrigindo nos devidos momentos, permitindo que tudo isso acontecesse ao longa da minha vida e não somente nestes anos como universitário, mas em todos os momentos. Agradeço também minha namorada Andrielle, que sempre foi compreensível diante do tempo investido a este trabalho, me dando apoio e incentivo, além de estar sempre disponível para ajudar como possível ao longo do trabalho e aguentando meus assuntos tecnológicos entendiantes. Merecem agradecimento também os professores do curso de Ciência da Computação por todo o conhecimento, manifestação do caráter, confiança e ética da educação no processo de formação profissional. Também agradeço aos amigos e companheiros de trabalhos, de forma especial ao Prof. Dr. Guilherme Afonso Madalozzo por todo auxílio durante o desenvolvimento do trabalho. A todos que direta ou indiretamente fizeram parte da minha formação, o meu muito obrigado.
+Agradeço primeiramente a Deus.
+
+À minha família, por me apoiarem incondicionalmente e estarem sempre ao meu lado, sendo um alicerce nos momentos difíceis.
+
+Aos professores do curso de Ciência da Computação por todo o conhecimento, manifestação do caráter, confiança e ética da educação no processo de formação profissional. Também agradeço aos amigos e companheiros de trabalhos, de forma especial ao Prof. Dr. Guilherme Afonso Madalozzo por todo auxílio durante o desenvolvimento do trabalho. 
+
+A todas as pessoas que direta ou indiretamente contribuíram de alguma maneira para que este trabalho pudesse ser realizado.
 
 \end{SingleSpacing}
 \end{resumo}
