--- a/text-elements/pre-textuais/listas/lista-siglas.tex
+++ b/text-elements/pre-textuais/listas/lista-siglas.tex
@@ -6,10 +6,13 @@
     \item[A-GPS] \textit{Assisted Global Positioning System}
     \item[AJAX] \textit{Asynchronous JavaScript and XML}
     \item[API] \textit{Application Programming Interface}
+    \item[BSD] \textit{Berkeley Software Distribution}
     \item[CDMA] \textit{Code Division Multiple Access}
     \item[CGI] \textit{Common Gateway Interface}
     \item[CLI] \textit{Command Line Interfaces}
+    \item[FI] \textit{Form Interpreter}
     \item[GIS] \textit{Geographic Information System}
+    \item[GNU] \textit{General Public License}
     \item[GPRS] \textit{General Packet Radio Service}
     \item[GPS] \textit{Global Position System}
     \item[GSM] \textit{Global System for Mobile Communications}
@@ -19,17 +22,24 @@
     \item[IP] \textit{Internet Protocol Address}
     \item[JS] \textit{JavaScript}
     \item[JSON] \textit{JavaScript Object Notation}
-    \item[LTI] \textit{Long Term Support}
-    \item[MTI] Instituto de Tecnologia de Massachusetts
+    %\item[LTI] \textit{Long Term Support}
+    \item[MPM] \textit{Multi-Processing-Modules}
+    %\item[MTI] Instituto de Tecnologia de Massachusetts
     \item[MVC] \textit{Model-View-Controller}
+    \item[NNTP] \textit{Network News Transfer Protocol}
     \item[ORM] \textit{Object Relational Mapper}
     \item[PHP] \textit{Personal Home Page}
-    \item[PSR] \textit{PHP Standard Recommendation}
     \item[POP3] \textit{Post Office Protocol}
+    \item[POSIX] \textit{Portable Operating System Interface}
+    \item[PSR] \textit{PHP Standard Recommendation}
     \item[QR] \textit{Quick Response}
     \item[REST] \textit{Representational State Transfer}
+    \item[SNMP] \textit{Simple Network Management Protocol}
     \item[SOAP] \textit{Simple Object Access Protocol}
+    \item[SSL] \textit{Secure Sockets Layer}
+    %\item[TCL] \textit{Tool Command Language}
     \item[TTFF] Tempo de Localização Inicial
+    \item[URL] \textit{Uniform Resource Locator}
     \item[URI] \textit{Uniform Resource Identifier}
     \item[W3C] \textit{World Wide Web Consortium}
     \item[XML] \textit{Extensible Markup Language}
