--- a/text-elements/textuais/desenvolvimento/ferramentas.tex
+++ b/text-elements/textuais/desenvolvimento/ferramentas.tex
@@ -5,14 +5,17 @@ Este Capítulo descreve as ferramentas utilizadas para desenvolvimento do presen
 
 %\section{Maps JavaScript API}
 
+\section{CGI (Common Gateway Interface)}
+\input{text-elements/textuais/desenvolvimento/ferramentas/cgi.tex}
+
 \section{PHP}
 \input{text-elements/textuais/desenvolvimento/ferramentas/php.tex}
 
 \section{Laravel}
 \input{text-elements/textuais/desenvolvimento/ferramentas/laravel.tex}
 
-\section{Apache}
-%\input{text-elements/textuais/desenvolvimento/ferramentas/apache.tex}
-
 \section{MySQL}
 %\input{text-elements/textuais/desenvolvimento/ferramentas/mysql.tex}
+
+\section{Apache}
+\input{text-elements/textuais/desenvolvimento/ferramentas/apache.tex}
