--- a/text-elements/textuais/desenvolvimento/ferramentas/laravel.tex
+++ b/text-elements/textuais/desenvolvimento/ferramentas/laravel.tex
@@ -18,7 +18,7 @@ Segundo \citeonline{comparisonLaravel}, afirmaram que ao comparar PHP procedural
 
 \begin{table}[H]
     \centering
-    \caption[Resultado do experimento no tempo de execução]{Resultado do experimento no tempo de execução
+    \caption[Laravel - Resultado do experimento no tempo de execução]{Resultado do experimento no tempo de execução
     \label{tab:comparisonLaravel}}
     \begin{tabular}{rrrrr}
         \toprule
