--- a/text-elements/textuais/desenvolvimento/tecnologias.tex
+++ b/text-elements/textuais/desenvolvimento/tecnologias.tex
@@ -23,7 +23,7 @@ Uma boa API é o conjunto de arquivos que o aplicativo lê ou escreve, bem como 
 O World Wide Web Consortium (W3C) é a principal organização de padronização da rede mundial de computadores, desenvolvendo especificações técnicas e orientações através de um processo projetado para maximizar a consenso sobre as recomendações, garantindo qualidades técnicas e editoriais, por meio do desenvolvimento de protocolos comuns e fóruns abertos que promovam a sua evolução e assegurem a sua interoperabilidade, para levar a web ao seu potencial máximo \cite{api:w3c}.
 
 \subsection{REST}
-Segundo \citeonline{rest:roy}, o REST é uma sigla que significa \textit{Representational State Transfer}, é um modelo arquitetural que define um conjunto de regras simples para implementar serviços web. Porém, a mesma não define tecnologias que devem ser utilizadas. Uma forma de implementar REST é utilizar o conceito de \textit{RESTful} que se baseia no protocolo da aplicação HTTP, no padrão de nomenclatura URI e na linguagem XML/JSON. As respostas do REST são cacheáveis. Isso dá um grande aumento de performance em clientes simples. Utilizando esse conceito, os serviços se tornam disponíveis para diferentes aplicações clientes, ou seja, não há necessidade de mudança de uma aplicação para outra, pois o serviço se concentra em um servidor próprio. 
+Segundo \citeonline{rest:roy}, o REST é uma sigla que significa \textit{Representational State Transfer}, é um modelo arquitetural que define um conjunto de regras simples para implementar serviços web. Porém, a mesma não define tecnologias que devem ser utilizadas. Uma forma de implementar REST é utilizar o conceito de RESTful que se baseia no protocolo da aplicação HTTP, no padrão de nomenclatura URI e na linguagem XML/JSON. As respostas do REST são cacheáveis. Isso dá um grande aumento de performance em clientes simples. Utilizando esse conceito, os serviços se tornam disponíveis para diferentes aplicações clientes, ou seja, não há necessidade de mudança de uma aplicação para outra, pois o serviço se concentra em um servidor próprio. 
 
 Depois de seu surgimento, começou a se tornar uma alternativa mais leve de comunicação entre computadores (cliente e servidor). Para ser considerado REST, o \textit{Web Service} deve ser ou possuir: Interface uniforme, \textit{Stateless}, \textit{Cacheável}, Cliente-Servidor, Sistema em camadas e Código sob demanda \cite{rest:roy}. 
 
