--- a/text-elements/textuais/introducao.tex
+++ b/text-elements/textuais/introducao.tex
@@ -24,7 +24,7 @@ Utilizando a \textit{Google Maps Platform}, é possível encontrar o melhor traj
 %%% Original: No segundo capítulo, são detalhadas as tecnologias utilizadas no desenvolvimento deste trabalho, como é o caso dos métodos de geolocalização disponíveis atualmente, o Sistema de Posicionamento Global Assistido (A-GPS) e o serviço de pesquisa e visualização de mapas e imagens de satélite da Terra gratuito na web Google Maps, fornecido pela Google.
 
 %%% Rev-Madalozzo: Sempre usar iniciais em Maiúscuclas nas seguintes palavras: Capítulo, Seção, Tabela, Figura, Autor.
-No segundo Capítulo, são detalhadas as tecnologias utilizadas para o desenvolvimento do presente trabalho, tais como: métodos de geolocalização disponíveis atualmente; Sistema de Posicionamento Global Assistido (A-GPS); serviço de pesquisa e visualização de mapas e imagens de satélite do Planeta Terra, este gratuito via internet, através do Google Maps.
+No segundo Capítulo, são detalhadas as tecnologias utilizadas para o desenvolvimento do presente trabalho, tais como: métodos de geolocalização disponíveis atualmente, Sistema de Posicionamento Global Assistido (A-GPS), serviço de pesquisa e visualização de mapas e imagens de satélite do Planeta Terra, este gratuito via internet, através do Google Maps.
 
 O terceiro Capítulo aborda o estudo das técnicas e das ferramentas que foram necessárias para a construção da aplicação, passando pela linguagem base, servidor independente de plataforma, \textit{frameworks}, banco de dados e servidor web utilizados.
 
