--- a/text-elements/textuais/desenvolvimento/ferramentas/php.tex
+++ b/text-elements/textuais/desenvolvimento/ferramentas/php.tex
@@ -1,18 +1,20 @@
-PHP é um acrônimo recursivo para PHP: \textit{Hypertext Preprocessor} (Pré-Processador de Hipertexto), que originalmente se chamava \textit{Personal Home Page} (Página Inicial Pessoal), é uma linguagem de \textit{script open source} de uso geral, muito utilizada, e especialmente adequada para o desenvolvimento web e que pode ser embutida dentro do HTML, segundo \citeonline{phpdevelopment}. O que distingue o PHP de algo como o JS no lado do cliente é que o código é executado no servidor, gerando o HTML que é então enviado para o navegador. O navegador recebe os resultados da execução desse \textit{script}, mas não sabe qual era o código fonte
+PHP é um acrônimo recursivo para PHP: \textit{Hypertext Preprocessor} (Pré-Processador de Hipertexto), que originalmente se chamava \textit{Personal Home Page} (Página Inicial Pessoal), é uma linguagem de \textit{script open source} de uso geral, muito utilizada, e especialmente adequada para o desenvolvimento web e que pode ser embutida dentro do HTML, segundo \citeonline{phpdevelopment}. O que distingue o PHP de algo como o JS no lado do cliente é que o código é executado no servidor, gerando o HTML que é então enviado para o navegador. O navegador recebe os resultados da execução desse \textit{script}, mas não sabe qual era o código fonte.
 
-\citeonline{bentodesenvolvimento} explica que PHP é uma ferramenta que possibilita o pré-processamento de páginas HTML. Dessa forma, PHP consegue alterar o conteúdo de uma página, antes de enviá-la para o navegador. Além disso, PHP também permite capturar entradas de dados do usuário, como formulários e outras formas de interação. Trata-se de uma linguagem altamente popular devido à sua natureza de código aberto e suas funcionalidades versáteis, sendo uma linguagem de \textit{script} do tipo \textit{server-side} com diversos propósitos. Porém, ela é principalmente utilizada para gerar conteúdos dinâmicos em um site.
+\citeonline{bentodesenvolvimento} explica que PHP é uma ferramenta que possibilita o pré-processamento de páginas HTML. Dessa forma, PHP consegue alterar o conteúdo de uma página, antes de enviá-la para o navegador. Além disso, PHP também permite capturar entradas de dados do usuário, como formulários e outras formas de interação. Trata-se de uma linguagem altamente popular devido à sua natureza de código aberto e suas funcionalidades versáteis, sendo uma linguagem de \textit{script}, escrita de forma procedural, orientada a objetos ou ainda ambas, do tipo \textit{server-side} com diversos propósitos. Porém, ela é principalmente utilizada para gerar conteúdos dinâmicos em um site.
 
 Destaca-se do pensamento de \citeonline{bentodesenvolvimento}, existem diversos motivos para escolher esta tecnologia, alguns motivos são:
 
 \begin{itemize}
-    \item Nasceu para a web e sua integração com qualquer sistema operacional, banco de dados e servidor web é simples, mais baratos e fáceis de encontrar;
+    \item Nasceu para a web e sua integração com qualquer sistema operacional, servidor web e banco de dados, como: dBase, Interbase, mySQL, Oracle, Sybase, PostgreSQL e vários outros, é simples e econômica;
     \item Curva de aprendizado suave, comparada a outras linguagens;
     \item Tecnologia livre;
-    \item Suporte para conversar com outros serviços usando protocolos como IMAP, POP3, HTTP.
+    \item Suporte para conversar com outros serviços usando protocolos como IMAP, SNMP, NNTP, POP3 e, logicamente, HTTP. Ainda é possível abrir \textit{sockets} e interagir com outros protocolos.
 \end{itemize}
 
-Atualmente, o PHP, é uma das linguagens de programação mais usadas no mundo. O termo PHP foi criado com apenas um aglomerado de códigos CGI (elemento que torna a ligação física ou lógica entre dois sistemas ou servidores, descritos em uma linguagem C). A ideia inicial era acompanhar o tráfego do site pessoal do criador. Os anos passaram e o criador desenvolvia \textit{scripts}, o que aumentava os recursos que o site dele tinha \cite{phpdevelopment}.
+As origens do PHP datam de 1994, criado com apenas um aglomerado de códigos binários CGI escritos em linguagem C, para fazer a ligação lógica entre dois sistemas ou servidores pela internet. Esse mesmo conjunto de códigos, que nada mais era do que um aglomerado de \textit{scripts}, foi inicialmente nomeado como PHP/FI, uma versão prematura do PHP. A ideia inicial era acompanhar o tráfego do site pessoal do criador. Os anos passaram e o criador desenvolvia \textit{scripts}, o que aumentava os recursos que o site dele tinha \cite{phpdevelopment}.
 
 Ainda conforme o autor citado acima, o sucesso dessa linguagem foi tão grande que o criador, Rasmus Lerdof, transformou o aglomerado de códigos CGI em uma linguagem de programação. Com isso, a grande maioria dos sites e aplicações passaram a utilizar o PHP como linguagem principal.
+% + SOBRE: https://www.weblink.com.br/blog/php/o-que-e-php-conheca/
+%https://www.oficinadanet.com.br/artigo/659/o_que_e_php
 
 %IntegrandoPHPcomMySQL \cite{bentodesenvolvimento}
