--- a/referencias.bib
+++ b/referencias.bib
@@ -10,12 +10,27 @@
   publisher={McGraw Hill Brasil}
 }
 
+@book{pressman2009engenharia,
+  title={Engenharia de Software - 7.ed.},
+  author={Pressman, R.S.},
+  isbn={9788580550443},
+  year={2009},
+  publisher={McGraw Hill Brasil}
+}
+
 @book{bentodesenvolvimento,
   title={Desenvolvimento Web Com Php E Mysql},
   author={Bento, E.J.},
   isbn={9788566250305},
   year={2014},
   publisher={CASA DO CODIGO}
+}
+
+@book{thomsonphp,
+  title={Php E Mysql Desenvolvimento Web},
+  author={Laura Thomson and Luke Welling},
+  year={2005},
+  publisher={Campus}
 }
 
 @book{tulach2008practical,
@@ -50,11 +65,19 @@
   url={https://www.researchgate.net/profile/Marcelo_Souza7/publication/228608559_Analise_do_Servidor_Web_Apache_em_Clusters_OpenMosix_com_Memoria_Compartilhada_Distribuida/links/0046351a6611e5a783000000/Analise-do-Servidor-Web-Apache-em-Clusters-OpenMosix-com-Memoria-Compartilhada-Distribuida.pdf}
 }
 
+@Article{mysql:ufpe,
+  Title                    = {Comparativo de Desempenho entre Bancos de Dados de Código Aberto},
+  Author                   = {Carlos E. S. Pires and Rilson O. Nascimento and Ana C. Salgado},
+  Year                     = {2008},
+  url={https://www.researchgate.net/profile/Ana_Carolina_Salgado/publication/242213657_Comparativo_de_Desempenho_entre_Bancos_de_Dados_de_Codigo_Aberto/links/004635296426ba710e000000/Comparativo-de-Desempenho-entre-Bancos-de-Dados-de-Codigo-Aberto.pdf},
+  Address                   = {Universidade Federal de Pernambuco (UFPE)}
+}
+
 @Article{apache:corte,
   Title                    = {Método para  a avaliação de servidores WWW no ambiente corporativo},
   Author                   = {Leandro Côrte},
   Year                     = {2002},
-  Address                   = {Universidade Federal do Rio Grande do Sul},
+  Address                   = {Universidade Federal do Rio Grande do Sul (UFRGS)},
   url={https://lume.ufrgs.br/handle/10183/3375}
 }
 
@@ -66,6 +89,15 @@
   Url                     =  {https://news.netcraft.com/archives/2019/09/27/september-2019-web-server-survey.html},
   Urlaccessdate           = {29 de setembro de 2019}
 }
+
+@misc{mariadb,
+  Title                   = {About MariaDB},
+  Author                  = {MariaDB},
+  Year                    = {2019},
+  Url                     =  {https://mariadb.org/},
+  Urlaccessdate           = {02 de outubro de 2019}
+}
+
 
 @misc{modapache,
   Title                   = {Entendendo a organização dos arquivos Apache 2},
