--- a/text-elements/pre-textuais/listas/lista-siglas.tex
+++ b/text-elements/pre-textuais/listas/lista-siglas.tex
@@ -11,6 +11,7 @@
     \item[CGI] \textit{Common Gateway Interface}
     \item[CLI] \textit{Command Line Interfaces}
     \item[FI] \textit{Form Interpreter}
+    \item[GB] Gigabyte
     \item[GIS] \textit{Geographic Information System}
     \item[GNU] \textit{General Public License}
     \item[GPRS] \textit{General Packet Radio Service}
@@ -22,22 +23,23 @@
     \item[IP] \textit{Internet Protocol Address}
     \item[JS] \textit{JavaScript}
     \item[JSON] \textit{JavaScript Object Notation}
-    %\item[LTI] \textit{Long Term Support}
+    \item[MB] Megabyte
     \item[MPM] \textit{Multi-Processing-Modules}
-    %\item[MTI] Instituto de Tecnologia de Massachusetts
     \item[MVC] \textit{Model-View-Controller}
     \item[NNTP] \textit{Network News Transfer Protocol}
     \item[ORM] \textit{Object Relational Mapper}
+    \item[OSDB] \textit{Open Source Database Benchmark}
     \item[PHP] \textit{Personal Home Page}
     \item[POP3] \textit{Post Office Protocol}
     \item[POSIX] \textit{Portable Operating System Interface}
     \item[PSR] \textit{PHP Standard Recommendation}
     \item[QR] \textit{Quick Response}
+    \item[RDBMS] \textit{Relational Database Management Systems}
     \item[REST] \textit{Representational State Transfer}
+    \item[SGBD] Sistemas de Gestão de Base de Dados
     \item[SNMP] \textit{Simple Network Management Protocol}
     \item[SOAP] \textit{Simple Object Access Protocol}
     \item[SSL] \textit{Secure Sockets Layer}
-    %\item[TCL] \textit{Tool Command Language}
     \item[TTFF] Tempo de Localização Inicial
     \item[URL] \textit{Uniform Resource Locator}
     \item[URI] \textit{Uniform Resource Identifier}
