--- a/text-elements/textuais/desenvolvimento/desenvolvimento.tex
+++ b/text-elements/textuais/desenvolvimento/desenvolvimento.tex
@@ -7,7 +7,6 @@ juntamente com o desenvolvimento de uma aplicação encarregada de gerenciar os 
 com um painel de controle para geração de lotes de entregas e o desenvolvimento de um módulo destinado ao motoboy, no qual consegue observar, em um mapa, a rota e pontos de parada que devem ser percorridos no lote disponível para entrega, tudo isso em tempo real.
 
 \section{Softwares utilizados}
-
 Esta Seção apresenta os \textit{Softwares} utilizados na etapa de codificação da aplicação.
 
 \begin{itemize}
@@ -24,6 +23,7 @@ Esta Seção apresenta os \textit{Softwares} utilizados na etapa de codificaçã
     \item GitHub: plataforma de hospedagem de código-fonte com controle de versão.
 \end{itemize}
 
+\newpage
 Ao utilizar o comando \textit{composer create-project --prefer-dist laravel/laravel delivery-routes} no Cmder, dentro de uma pasta no sistema operacional destinada a programação da aplicação, foi criada a estrutura base do projeto, cedida pelo Laravel, apresentada na \autoref{fig:base-projeto}. A facilidade na criação do projeto se deve ao Cmder, que torna o trabalho no sistema operacional da Microsoft mais agradável, com essa ferramenta é possível rodar comandos do Linux e MAC que são baseados em UNIX para o Windows. Embora nas versões mais recentes do Windows (>= 8.1) já tenha o \textit{Power Shell} que atende bem a maiorias de comandos UNIX (que são essenciais para desenvolvedores) ainda sim é totalmente recomendado utilizar alguma ferramenta que nivela estes pontos.
 
 \begin{figure}[H]
@@ -45,6 +45,8 @@ Ao utilizar o comando \textit{composer create-project --prefer-dist laravel/lara
 \section{Coleta de dados}
 
 %%% Rev-Madalozzo: Aqui no módulo de gerenciamento sugiro você listar todos os pacotes de terceiros que é util e que você utilizou na tua aplicação. Por exemplo, na aula usamos o AdminLTE, caso tu uso algum módulo de terceiros lista neste Capítulo
+
+%O atual sistema de banco de dados do Laboratório de Meteorologia da Fundação Universidade Federal do Rio Grande foi desenvolvido com base na tríade MySQL, PHP e Apache
 
 \section{Módulo de gerenciamento}
 
