--- a/text-elements/textuais/desenvolvimento/ferramentas.tex
+++ b/text-elements/textuais/desenvolvimento/ferramentas.tex
@@ -15,7 +15,8 @@ Este Capítulo descreve as ferramentas utilizadas para desenvolvimento do presen
 \input{text-elements/textuais/desenvolvimento/ferramentas/laravel.tex}
 
 \section{MySQL}
-%\input{text-elements/textuais/desenvolvimento/ferramentas/mysql.tex}
+\input{text-elements/textuais/desenvolvimento/ferramentas/mysql.tex}
 
+\newpage
 \section{Apache}
 \input{text-elements/textuais/desenvolvimento/ferramentas/apache.tex}
