--- a/text-elements/textuais/desenvolvimento/ferramentas/mysql.tex
+++ b/text-elements/textuais/desenvolvimento/ferramentas/mysql.tex
@@ -1,3 +1,29 @@
+Segundo \citeonline{thomsonphp}, o MySQL é o sistema de gerenciamento de banco de dados relacional RDBMS mais utilizado atualmente, devido à sua performance rápida e consistente, além de estar disponível gratuitamente para fins não lucrativos, distribuído sob a licença GNU. O objetivo de um banco de dados é permitir o armazenamento, a classificação e a recuperação dos dados de uma forma eficiente. Um sistema de banco de dados tem como vantagens minimizar as incoerências, garantir a integridade dos dados, facilitar a realização de qualquer modificação necessária e possibilitar a criação de restrições de acesso, tudo de maneira muito organizada.
+
+Desenvolvido pela empresa sueca MySQL AB e publicado, originalmente, em maio de 1995. Após, a empresa foi comprada pela Sun Microsystems e, em janeiro de 2010, integrou a compra da Sun pela Oracle Corporation. Atualmente, a Oracle, embora tenha mantido a versão para a comunidade, tornou seu uso mais restrito e os desenvolvedores criaram, então, o projeto MariaDB para continuar desenvolvendo o código da versão 5.1 do MySQL, de forma totalmente aberta e gratuita. O MariaDB pretende manter compatibilidade com as versões lançadas pela Oracle \cite{mariadb}.
+
+\citeonline{bentodesenvolvimento} explica que PHP e MySQL já são velhos amigos. É bem comum encontrar aplicações que fazem uso destas tecnologias em conjunto. Desde pequenos sites pessoais, até grandes sistemas de gestão e lojas virtuais. O que torna esta parceria tão forte e estável é uma combinação de fatores, como o fato de o MySQL ser um banco fácil de aprender, leve e rápido, o PHP ser fácil e flexível e ambos possuírem licenças permissivas para uso pessoal, comercial e em projetos de software livre, através de funções que conectam, executam código SQL e trazem os resultados para a aplicação.
+
+\citeonline{mysql:ufpe} comparam em seu artigo três módulos: carga e estrutura, mono-usuário e multi-usuário nos bancos de dados: MySQL e PostgreSQL, seguindo as métricas do \textit{benchmark} OSDB, em plataforma GNU/Linux. Para os testes com o \textit{benchmark} OSDB, foram criadas duas bases de dados com tamanhos distintos: 512MB e 1GB. Para esses tamanhos de base a quantidade de linhas por tabela é de 1.280.000 (512MB) e 2.500.000 (1GB), respectivamente.
+
+De acordo com a \autoref{tab:comparisonMySql}, o desempenho do PostgreSQL foi superior ao MySQL apenas no módulo de carga e estrutura, especialmente na criação de índices. Nos demais módulos, o MySQL mostrou-se superior, apresentando melhores resultados na maioria dos testes. Diferentemente do PostgreSQL, o otimizador de consulta do MySQL optou por utilizar índice. Em alguns SGBD, a escolha de índices é influenciada pela existência de estatísticas sobre as estruturas de armazenamento. No PostgreSQL, as estatísticas são geradas apenas sob demanda. Como o kit do \textit{benchmark} não contempla a geração de estatísticas em seu código, isso ajuda a explicar o resultado \cite{mysql:ufpe}.
+
+\begin{table}[H]
+    \centering
+    \caption[MySQL - Resultados do Sumário Executivo ]{Resultados do Sumário Executivo
+    \label{tab:comparisonMySql}}
+\begin{tabular}{l|c|c|c|c|}
+\cline{2-5}
+ & \multicolumn{2}{c|}{\textbf{512MB}} & \multicolumn{2}{c|}{\textbf{1GB}} \\ \hline
+\multicolumn{1}{|l|}{\textbf{Módulo}} & \textbf{PostgreSQL} & \textbf{MySQL} & \textbf{PostgreSQL} & \textbf{MySQL} \\ \hline
+\multicolumn{1}{|l|}{Carga e Estrutura} & 14min & 39min & 45min & 1h23min \\ \hline
+\multicolumn{1}{|l|}{Mono-Usuário} & 27min & 8min & 57min & 19min \\ \hline
+\multicolumn{1}{|l|}{Multi-Usuário} & 1h06min & 50min & 3h43min & 1h34min \\ \hline
+\end{tabular}
+    \fonte{\citeonline{mysql:ufpe}}
+\end{table}
 
 
-%Acessandoeusandoumbancode dados \cite{bentodesenvolvimento}
+%https://www.hostinger.com.br/tutoriais/o-que-e-mysql/
+%https://www.techtudo.com.br/artigos/noticia/2012/04/o-que-e-e-como-usar-o-mysql.html
+%https://s3.amazonaws.com/academia.edu.documents/34869982/php.pdf?response-content-disposition=inline%3B%20filename%3DGuia_de_Consulta_Rapida.pdf&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWOWYYGZ2Y53UL3A%2F20191002%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20191002T225925Z&X-Amz-Expires=3600&X-Amz-SignedHeaders=host&X-Amz-Signature=080e2dfc5302cc2664e8c4f59c404477e862bb10f1b55b4519bf4991830b6b34
